--- a/example/client/index.html
+++ b/example/client/index.html
@@ -5,6 +5,7 @@
     <title>websocket test</title>
 </head>
 <body>
+    <script src="jsrsasign.js" type="application/javascript"></script>
     <script src="app.js" type="application/javascript"></script>
 </body>
 </html>
