add login and room

--- a/example/client/index.html
+++ b/example/client/index.html
@@ -5,6 +5,11 @@
     <title>websocket test</title>
 </head>
 <body>
+    <div>
+        <input id="" value="" type="number" step="0" placeholder="用户ID/房间号" />
+        <button id="btn-login">登录</button>
+        <button id="btn-join">加入</button>
+    </div>
     <script src="crypto.js" type="application/javascript"></script>
     <script src="jsencrypt.js" type="application/javascript"></script>
     <script src="app.js" type="application/javascript"></script>
