--- a/example/client/index.html
+++ b/example/client/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div>
-        <input id="" value="" type="number" step="0" placeholder="用户ID/房间号" />
+        <input id="input-id" value="" type="number" step="0" placeholder="用户ID/房间号" />
         <button id="btn-login">登录</button>
         <button id="btn-join">加入</button>
     </div>
